--- a/lap_0-html-css/day2-html-css-basics/group_task_sports_team/styles.css
+++ b/lap_0-html-css/day2-html-css-basics/group_task_sports_team/styles.css
@@ -53,10 +53,16 @@ div#second_sec {
     flex-wrap: wrap;
 }
 
+div.center {
+    margin: auto;
+}
+
 a {
     padding: 17px;
     border: 4px solid darkblue;
     border-radius: 22px;
+    margin: auto;
+
 }
 
 a:hover {
